test/src/e2e_vm_tests/test_programs/should_fail/module_cyclic_reference/src/b.sw
library;

use ::a::*;

pub fn b() {}
